--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>About – Uday Puvvada</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-  <style>
+<meta charset="utf-8"/>
+<title>About – Uday Puvvada</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
+<style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #121212;
@@ -20,17 +21,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      opacity: 0;
-      transform: translateY(-20px);
-      animation: slideDown 1s ease forwards;
+      
     }
 
-    @keyframes slideDown {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+   
 
     nav a {
       color: white;
@@ -116,59 +110,81 @@
       }
     }
   </style>
-</head>
+<style>
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .hero, .intro, .page-section, .cta-buttons {
+        padding: 1rem;
+        flex-direction: column !important;
+        text-align: center;
+        align-items: center;
+      }
+      .hero-img img {
+        width: 180px !important;
+        height: 180px !important;
+      }
+      .project-card, .skills-grid {
+        flex-direction: column !important;
+        align-items: center;
+        text-align: center;
+      }
+      .btn, .btn-outline {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+    }
+    </style></head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <section class="page-section">
-    <h2>About Me</h2>
-    <p class="about-text" data-aos="fade-up">
+<header>
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+</nav>
+</header>
+<section class="page-section">
+<h2>About Me</h2>
+<p class="about-text" data-aos="fade-up">
       I'm Uday Puvvada, a data analyst with a strong foundation in engineering and a passion for storytelling through data.
       I specialize in building dashboards, predictive models, and automation pipelines that create business value.
       With hands-on experience across HR analytics, NLP, and time-series forecasting, I bridge the gap between raw data and real-world decision-making.
     </p>
-
-    <h2>Skills</h2>
-    <div class="skills-grid">
-      <div class="skill-card" data-aos="zoom-in">
-        <h3>Python</h3>
-        <p>Data analysis, ML models, automation</p>
-      </div>
-      <div class="skill-card" data-aos="zoom-in" data-aos-delay="100">
-        <h3>SQL</h3>
-        <p>Data querying, joins, CTEs</p>
-      </div>
-      <div class="skill-card" data-aos="zoom-in" data-aos-delay="200">
-        <h3>Excel / VBA</h3>
-        <p>Dashboards, advanced formulas, macros</p>
-      </div>
-      <div class="skill-card" data-aos="zoom-in" data-aos-delay="300">
-        <h3>Tableau / Power BI</h3>
-        <p>Data visualization, reporting</p>
-      </div>
-      <div class="skill-card" data-aos="zoom-in" data-aos-delay="400">
-        <h3>TensorFlow / Keras</h3>
-        <p>Deep learning, CNN, LSTM</p>
-      </div>
-      <div class="skill-card" data-aos="zoom-in" data-aos-delay="500">
-        <h3>Git & GitHub</h3>
-        <p>Version control, collaboration</p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2024 Uday Puvvada. All rights reserved.
+<h2>Skills</h2>
+<div class="skills-grid">
+<div class="skill-card" data-aos="zoom-in">
+<h3>Python</h3>
+<p>Data analysis, ML models, automation</p>
+</div>
+<div class="skill-card" data-aos="zoom-in" data-aos-delay="100">
+<h3>SQL</h3>
+<p>Data querying, joins, CTEs</p>
+</div>
+<div class="skill-card" data-aos="zoom-in" data-aos-delay="200">
+<h3>Excel / VBA</h3>
+<p>Dashboards, advanced formulas, macros</p>
+</div>
+<div class="skill-card" data-aos="zoom-in" data-aos-delay="300">
+<h3>Tableau / Power BI</h3>
+<p>Data visualization, reporting</p>
+</div>
+<div class="skill-card" data-aos="zoom-in" data-aos-delay="400">
+<h3>TensorFlow / Keras</h3>
+<p>Deep learning, CNN, LSTM</p>
+</div>
+<div class="skill-card" data-aos="zoom-in" data-aos-delay="500">
+<h3>Git &amp; GitHub</h3>
+<p>Version control, collaboration</p>
+</div>
+</div>
+</section>
+<footer>
+    © 2024 Uday Puvvada. All rights reserved.
   </footer>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>
 </body>
 </html>
