--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Contact – Uday Puvvada</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
+<head><meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta charset="utf-8"/>
+<title>Contact – Uday Puvvada</title>
+<link href="style.css" rel="stylesheet"/>
+<style>
     .submit-btn {
       animation: pulse 2s infinite;
     }
@@ -46,34 +47,59 @@
       color: #66ccff;
     }
   </style>
-</head>
+<style>
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .hero, .intro, .page-section, .cta-buttons {
+        padding: 1rem;
+        flex-direction: column !important;
+        text-align: center;
+        align-items: center;
+      }
+      .hero-img img {
+        width: 180px !important;
+        height: 180px !important;
+      }
+      .project-card, .skills-grid {
+        flex-direction: column !important;
+        align-items: center;
+        text-align: center;
+      }
+      .btn, .btn-outline {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+    }
+    </style></head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <section class="page-section">
-    <h2>Contact</h2>
-    <form action="https://formspree.io/f/yourFormID" method="POST">
-      <div class="input-container">
-        <input type="text" name="name" required />
-        <label>Your Name</label>
-      </div>
-      <div class="input-container">
-        <input type="email" name="email" required />
-        <label>Your Email</label>
-      </div>
-      <div class="input-container">
-        <textarea name="message" rows="4" required></textarea>
-        <label>Your Message</label>
-      </div>
-      <button type="submit" class="submit-btn">Send Message</button>
-    </form>
-  </section>
+<header>
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+</nav>
+</header>
+<section class="page-section">
+<h2>Contact</h2>
+<form action="https://formspree.io/f/yourFormID" method="POST">
+<div class="input-container">
+<input name="name" required="" type="text"/>
+<label>Your Name</label>
+</div>
+<div class="input-container">
+<input name="email" required="" type="email"/>
+<label>Your Email</label>
+</div>
+<div class="input-container">
+<textarea name="message" required="" rows="4"></textarea>
+<label>Your Message</label>
+</div>
+<button class="submit-btn" type="submit">Send Message</button>
+</form>
+</section>
 </body>
 </html>
