--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,12 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Projects – Uday Puvvada</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
+<head><meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta charset="utf-8"/>
+<title>Projects – Uday Puvvada</title>
+<link href="style.css" rel="stylesheet"/>
+<style>
     .zoom-on-load {
       transform: scale(0.95);
       opacity: 0;
@@ -140,82 +141,99 @@
   }
 
   </style>
-
-
-  
-</head>
+<style>
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .hero, .intro, .page-section, .cta-buttons {
+        padding: 1rem;
+        flex-direction: column !important;
+        text-align: center;
+        align-items: center;
+      }
+      .hero-img img {
+        width: 180px !important;
+        height: 180px !important;
+      }
+      .project-card, .skills-grid {
+        flex-direction: column !important;
+        align-items: center;
+        text-align: center;
+      }
+      .btn, .btn-outline {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+    }
+    </style></head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <section class="page-section">
-    <h2 class="zoom-on-load">Projects</h2>
-
-    <div class="project zoom-on-load project-card">
-      <img src="https://images.unsplash.com/photo-1584291527908-033f4d6542c8?q=80&w=1925&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="project-img" />
-      <div class="project-content">
-        <h3>Hiring Dashboard</h3>
-        <p>Built a dynamic Excel dashboard for incentive tracking and performance analysis across 680+ employees.</p>
-        <p>Used slicers, pivot tables, and VBA to automate bonus validation and filter insights by department.</p>
-        <div class="tags">
-          <span class="tag">Excel</span>
-          <span class="tag">VBA</span>
-          <span class="tag">Data Cleaning</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="project zoom-on-load project-card">
-      <img src="https://images.unsplash.com/photo-1620969427101-7a2bb6d83273?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHdvcmQlMjBjb25uZWN0aW9uc3xlbnwwfHwwfHx8MA%3D%3D" class="project-img" />
-      <div class="project-content">
-        <h3>NLP Genre Classifier</h3>
-        <p>Built a multi-label classification model using BERT to predict movie genres from plot summaries.</p>
-        <p>Deployed an interactive web app with Streamlit to visualize predictions and confidence scores.</p>
-        <div class="tags">
-          <span class="tag">Python</span>
-          <span class="tag">NLP</span>
-          <span class="tag">BERT</span>
-          <span class="tag">Streamlit</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="project zoom-on-load project-card">
-      <img src="https://plus.unsplash.com/premium_photo-1682310539039-1a65c8fc0b4a?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODV8fHJlY29tbWVuZGF0aW9uJTIwc3lzdGVtfGVufDB8fDB8fHww" class="project-img" />
-      <div class="project-content">
-        <h3>Coupon Recommendation System</h3>
-        <p>Created a machine learning pipeline to predict travel coupon usage using classification algorithms.</p>
-        <p>Performed feature engineering, model tuning, and evaluation with high F1-scores.</p>
-        <div class="tags">
-          <span class="tag">Python</span>
-          <span class="tag">scikit-learn</span>
-          <span class="tag">Logistic Regression</span>
-          <span class="tag">SVM</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="project zoom-on-load project-card">
-      <img src="https://images.unsplash.com/photo-1491677533189-49af044391ed?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZW5lcmd5JTIwZm9yZWNhc3Rpbmd8ZW58MHx8MHx8fDA%3D" class="project-img" />
-      <div class="project-content">
-        <h3>Energy Forecasting (CNN-LSTM)</h3>
-        <p>Developed a CNN-LSTM model to forecast daily energy generation based on weather and sensor data.</p>
-        <p>Used time-series preprocessing, feature scaling, and model evaluation (MAE, RMSE).</p>
-        <div class="tags">
-          <span class="tag">Deep Learning</span>
-          <span class="tag">CNN-LSTM</span>
-          <span class="tag">TensorFlow</span>
-          <span class="tag">Keras</span>
-        </div>
-      </div>
-    </div>
-  </section>
+<header>
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+</nav>
+</header>
+<section class="page-section">
+<h2 class="zoom-on-load">Projects</h2>
+<div class="project zoom-on-load project-card">
+<img class="project-img" src="https://images.unsplash.com/photo-1584291527908-033f4d6542c8?q=80&amp;w=1925&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
+<div class="project-content">
+<h3>Hiring Dashboard</h3>
+<p>Built a dynamic Excel dashboard for incentive tracking and performance analysis across 680+ employees.</p>
+<p>Used slicers, pivot tables, and VBA to automate bonus validation and filter insights by department.</p>
+<div class="tags">
+<span class="tag">Excel</span>
+<span class="tag">VBA</span>
+<span class="tag">Data Cleaning</span>
+</div>
+</div>
+</div>
+<div class="project zoom-on-load project-card">
+<img class="project-img" src="https://images.unsplash.com/photo-1620969427101-7a2bb6d83273?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHdvcmQlMjBjb25uZWN0aW9uc3xlbnwwfHwwfHx8MA%3D%3D"/>
+<div class="project-content">
+<h3>NLP Genre Classifier</h3>
+<p>Built a multi-label classification model using BERT to predict movie genres from plot summaries.</p>
+<p>Deployed an interactive web app with Streamlit to visualize predictions and confidence scores.</p>
+<div class="tags">
+<span class="tag">Python</span>
+<span class="tag">NLP</span>
+<span class="tag">BERT</span>
+<span class="tag">Streamlit</span>
+</div>
+</div>
+</div>
+<div class="project zoom-on-load project-card">
+<img class="project-img" src="https://plus.unsplash.com/premium_photo-1682310539039-1a65c8fc0b4a?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODV8fHJlY29tbWVuZGF0aW9uJTIwc3lzdGVtfGVufDB8fDB8fHww"/>
+<div class="project-content">
+<h3>Coupon Recommendation System</h3>
+<p>Created a machine learning pipeline to predict travel coupon usage using classification algorithms.</p>
+<p>Performed feature engineering, model tuning, and evaluation with high F1-scores.</p>
+<div class="tags">
+<span class="tag">Python</span>
+<span class="tag">scikit-learn</span>
+<span class="tag">Logistic Regression</span>
+<span class="tag">SVM</span>
+</div>
+</div>
+</div>
+<div class="project zoom-on-load project-card">
+<img class="project-img" src="https://images.unsplash.com/photo-1491677533189-49af044391ed?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZW5lcmd5JTIwZm9yZWNhc3Rpbmd8ZW58MHx8MHx8fDA%3D"/>
+<div class="project-content">
+<h3>Energy Forecasting (CNN-LSTM)</h3>
+<p>Developed a CNN-LSTM model to forecast daily energy generation based on weather and sensor data.</p>
+<p>Used time-series preprocessing, feature scaling, and model evaluation (MAE, RMSE).</p>
+<div class="tags">
+<span class="tag">Deep Learning</span>
+<span class="tag">CNN-LSTM</span>
+<span class="tag">TensorFlow</span>
+<span class="tag">Keras</span>
+</div>
+</div>
+</div>
+</section>
 </body>
 </html>
-
