--- a/index.html
+++ b/index.html
@@ -155,6 +155,33 @@
       to { opacity: 1; }
     }
   </style>
+ <style>
+  @media (max-width: 768px) {
+    nav {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .hero, .intro, .page-section, .cta-buttons {
+      padding: 1rem;
+      flex-direction: column !important;
+      text-align: center;
+      align-items: center;
+    }
+    .hero-img img {
+      width: 180px !important;
+      height: 180px !important;
+    }
+    .project-card, .skills-grid {
+      flex-direction: column !important;
+      align-items: center;
+      text-align: center;
+    }
+    .btn, .btn-outline {
+      width: 100%;
+      margin-bottom: 1rem;
+    }
+  }
+  </style>
 </head>
 <body>
   <header>
