--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 </header>
 <section class="page-section">
 <h2>Contact</h2>
-<form action="https://formspree.io/f/yourFormID" method="POST">
+<form action="https://formspree.io/f/xdkelgbz" method="POST">
 <div class="input-container">
 <input name="name" required="" type="text"/>
 <label>Your Name</label>
@@ -103,3 +103,4 @@
 </section>
 </body>
 </html>
+
