--- a/projects.html
+++ b/projects.html
@@ -190,7 +190,7 @@
 <span class="tag">VBA</span>
 <span class="tag">Data Cleaning</span>
 </div>
-</div>
+<div class="btn-group"><a class="btn" href="https://github.com/yourusername/hiring-dashboard" target="_blank">View Code →</a></div></div>
 </div>
 <div class="project zoom-on-load project-card">
 <img class="project-img" src="https://images.unsplash.com/photo-1620969427101-7a2bb6d83273?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHdvcmQlMjBjb25uZWN0aW9uc3xlbnwwfHwwfHx8MA%3D%3D"/>
@@ -204,7 +204,7 @@
 <span class="tag">BERT</span>
 <span class="tag">Streamlit</span>
 </div>
-</div>
+<div class="btn-group"><a class="btn" href="https://github.com/yourusername/nlp-genre-classifier" target="_blank">View Code →</a></div></div>
 </div>
 <div class="project zoom-on-load project-card">
 <img class="project-img" src="https://plus.unsplash.com/premium_photo-1682310539039-1a65c8fc0b4a?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODV8fHJlY29tbWVuZGF0aW9uJTIwc3lzdGVtfGVufDB8fDB8fHww"/>
@@ -218,7 +218,7 @@
 <span class="tag">Logistic Regression</span>
 <span class="tag">SVM</span>
 </div>
-</div>
+<div class="btn-group"><a class="btn" href="https://github.com/yourusername/coupon-recommendation" target="_blank">View Code →</a></div></div>
 </div>
 <div class="project zoom-on-load project-card">
 <img class="project-img" src="https://images.unsplash.com/photo-1491677533189-49af044391ed?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZW5lcmd5JTIwZm9yZWNhc3Rpbmd8ZW58MHx8MHx8fDA%3D"/>
@@ -232,7 +232,7 @@
 <span class="tag">TensorFlow</span>
 <span class="tag">Keras</span>
 </div>
-</div>
+<div class="btn-group"><a class="btn" href="https://github.com/yourusername/energy-forecasting-cnn-lstm" target="_blank">View Code →</a></div></div>
 </div>
 </section>
 </body>
