--- a/index.html
+++ b/index.html
@@ -161,13 +161,19 @@
         flex-direction: column;
         align-items: flex-start;
       }
-      .hero, .intro, .page-section,.cta-buttons {
+      .hero, .intro, .page-section {
         padding: 1rem;
         flex-direction: column !important;
         text-align: center;
         align-items: center;
       }
-       
+       .cta-buttons{
+        padding: 1rem;
+        flex-direction: column !important;
+        text-align: center;
+        align-items: center;
+        display: contents;
+      }
       .hero-img img {
         width: 180px !important;
         height: 180px !important;
@@ -201,6 +207,7 @@
     </div>
     <p id="typewriter-text"></p>
     <div class="cta-buttons">
+      <a href="projects.html" class="btn">View Projects</a>
       <a href="assets/Uday_Resume.pdf" class="btn-outline" download>Download Resume</a>
       <a href="contact.html" class="btn-outline">Get in Touch</a>
     </div>
