--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
         flex-direction: column !important;
         text-align: center;
         align-items: center;
-        display: contents;
+        display: flex;
+        width: 143px;
       }
       .hero-img img {
         width: 180px !important;
